Use immutable maps for read-only cache for faster access, less memory footprint and immutability